--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ h1{
 .image-gallery img{
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    /* object-fit: cover; */
     border-radius: 20px;
 }
 
@@ -41,28 +41,36 @@ h1{
     position: relative;
     border-radius: 20px;
     filter: grayscale(100%);
-    transition: all 1s ease;
+    overflow: hidden;
+    transition: all 0.3s ease-in;
 }
 
 .image-card:hover{
     filter: grayscale(0%);
-    transform: scale(1.01);
-    box-shadow: 0 0 20px rgba(128, 128, 128, 0.832);
+    transform: scale(1.03);
+    filter: drop-shadow(0 0 10px #333);
 }
+
 
 .image-card p{
     position: absolute;
-    color: white;
+    color: white;   
     font-size: 1.2rem;
     text-shadow: 0 0 10px grey;
-    bottom: 20px;
-    left: 20px;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    padding: 30px;
+    
     opacity: 0;
-    transition: all 0.2s ease-in-out;
+    transition: all 0.3s ease-in;
 }
 
 
 .image-card:hover p{
     opacity: 1 ;
+    scale: 1.03;
+    width: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0) , rgba(0, 0, 0, 0.545));
 }
 
